# BPI-1296-Android7

./: .build_config  README.md  build_android.sh  build_openwrt.sh  build_prepare.sh  build_release_android.sh  build_release_openwrt.sh  make_otapackage_N.sh  uboot_miskcheckout.sh
android/device/realtek/proprietary/libs/SetupMenu/: Android.mk  CMakeLists.txt  Makefile  Makefile.linaro  setup_key_value.h  setup_key_value_android.h
android/device/realtek/proprietary/libs/SetupMenu/test/: Android.mk
android/device/realtek/proprietary/libs/hardware/Board/: Android.mk  CMakeLists.txt  Makefile
android/device/realtek/proprietary/libs/hardware/Board/RTD1186-DEMO/: Makefile
android/device/realtek/proprietary/libs/hardware/Board/RTD1186-QA/: CMakeLists.txt
android/device/realtek/proprietary/libs/hardware/GPIO/: Android.mk  CMakeLists.txt  Makefile
android/device/realtek/proprietary/libs/hardware/VoutUtil/: Android.mk  CMakeLists.txt  Makefile  Makefile.linaro
android/device/realtek/proprietary/libs/hardware/VoutUtil/test/: Android.mk  ErrorDef.h  VoutUtilWrapper.h  prepare_method_parameters.h  vout_util_cmdline.h
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/ADummyDecoder/: Android.mk_  CMakeLists.txt  MakeConfig  Makefile  config.txt  include.lnk  src.lnk
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/ADummyDecoder/rpc/: Makefile  smw_instmap.h
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/DummyDecoder/: Android.mk  CMakeLists.txt  Makefile  VP8README
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/: Android.mk  CMakeLists.txt  Makefile  README
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/CommonUtility/: AAC_Utility.h  Android.mk  ID3.h  Makefile  SocketAVData_Utility.h  TS_Utility.h
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/DemuxDV/: CMakeLists.txt  DIF.h  DemuxDV.h  DemuxDVFile.h  DemuxDV_mips.h  Makefile  vaux.h
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/DemuxMPEGProgram/: CMakeLists.txt  DemuxMPEGProgram.h  Makefile
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/DemuxMPEGTransport/: CDemuxBuf.h  CMakeLists.txt  DemuxMPEGTransport.h  Makefile  TsDebug.h  TsDemux.h
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/DemuxPassthrough/: CMakeLists.txt  DemuxPassthrough.h  Makefile
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/IOPlugins/: CMakeLists.txt  Makefile
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/InputAIFF/: CMakeLists.txt  InputAIFF.h  Makefile  aiff.h
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/InputAPE/: InputAPE.c.org  InputAPE.c_OLD  InputAPE.h  InputAPEDef.h  Makefile  Makefile_OLD
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/InputAPE_ES/: APEHeaderManager.h  CMakeLists.txt  InputAPEDef.h  InputAPE_Utils.h  Makefile
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/InputASF/: ASFGUID.h  Android.mk  CMakeLists.txt  InputASF.h  Makefile  asf.h  asf_drm.h  asf_drm_type.h  asf_new.h
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/InputAV/: CMakeLists.txt  InputAV.h  InputAV_priv.h  Makefile
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/InputAVI/: AVI2.h  Android.mk  CMakeLists.txt  InputAVI.h  Makefile  OggDecode.h  asf.h  avi_internals.h  aviriff.h  bitmapinfo.h  divx_ex.h  divx_ultra.h  mmreg.h  ogg.h  utility.h
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/InputAudioES/: Android.mk  CMakeLists.txt  InputAudioES.h  Makefile  flac.h
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/InputBD/: CBdParser.h  CBdReader.h  CBdSubPath.h  CInputBD.h  EPMap.h  InputBD.h  Makefile  clpi_parse.h  mpls_parse.h  subpath_parse.h  util.h
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Filters/NavigationFilter/InputDTV/: Android.mk  CDTVInputPlugin.h  CDtvContextInfo.h  CDtvFileEditor.h  CDtvFileReader.h  CDtvFileWriter.h  CDtvSubPath.h  CMakeLists.txt  HLS.h  InfoHeader.h  InputDTV.h  Makefile  ts_parser.h
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Flows/PlayBack/: CMakeLists.txt  Makefile
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/StreamClass/: Android.mk  CMakeLists.txt  Makefile  README
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/Utility/ResourceMgr/: CMakeLists.txt  Makefile
android/device/realtek/proprietary/libs/libRTKExtractor/RTKExtractor/io/GeneralFileAccess/: Android.mk  CMakeLists.txt  Makefile  fastcopy_wrapper.h  file_db.h  file_util.h  internal.h
android/device/realtek/proprietary/libs/rtk_libs/OSAL/: Android.mk  CMakeLists.txt  Makefile  OSAL.dsp  OSAL.plg
android/device/realtek/proprietary/libs/rtk_libs/OSAL/include/: OSAL.h  md_api.h  se.h
android/device/realtek/proprietary/libs/rtk_libs/OSAL/include/OSAL/: PLI.h  SmartClass.h  Threads.h  Types.h  remote_malloc.h  remote_malloc_data.h
android/device/realtek/proprietary/libs/rtk_libs/OSAL/win32/: osal.dsw  osal.opt
android/frameworks/DLNA/libDLNADMPClass/: Android.mk  CMakeLists.txt  DLNA_DMP_1p5.cpp  DLNA_DMP_1p5_jni.cpp  DLNA_DMP_1p5_jni.h  OnLoad.cpp  RTK_MmsCp_1p5.cpp
android/frameworks/DLNA/libDLNADMPClass/include/: DLNA_DMP.h
android/frameworks/DLNA/libneon/src/: CMakeLists.txt  Makefile  ne_openssl.c  ne_request.c  ne_request.h  ne_session.c  ne_session.h  ne_socket.c  ne_socket.h  ne_stats.c  ne_stats.h  ne_uri.c
(+7476 files in other folders)
