INCLUDE(../../../../../include/config.txt)
SET(LIBNAME DLNAAppClass)
SET(LIBRARY_OUTPUT_PATH ../../../../../lib/)

SET(MYDEFS )
SET(rm " /bin/rm -f")
SET(cp " /bin/cp -f")
SET(CC " ${MYCXX}")
SET(AR " ${MYAR} cq")
SET(RANLIB " ${MYRANLIB}")
#SET(LIBNAME ../../../../../lib/libDLNAAppClass.a)
SET(INCLUDES  ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../Include/")
SET(MYDEFS " -DMMSCP_LEAN_AND_MEAN -DUSE_NEW_NAV=YES")

SET(CFLAGS " -DSYS_UNIX=1 ${MYDEFS}")
IF(APCFG_FLAGS MATCHES "APCFG_APP_UPNP")
SET(SRCS ./DLNA_DMP_1p5.cpp ./RTK_MmsCp_1p5.c)
SET(OBJS ./DLNA_DMP_1p5.o ./RTK_MmsCp_1p5.o)


ENDIF(APCFG_FLAGS MATCHES "APCFG_APP_UPNP")

INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS} ${DEBUGFLAG} ${WARNING})
ADD_LIBRARY(${LIBNAME} ${SRCS})
string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
