INCLUDE(../../../../../include/config.txt)
INCLUDE(../../../../../include/config.internal.txt)

SET(LIBNAME SetupAppClass)
SET(LIBRARY_OUTPUT_PATH ../../../../../lib/)

SET(MYDEFS )
SET(rm " /bin/rm -f")
SET(cp " /bin/cp -f")
SET(CC " ${MYCXX}")
SET(AR " ${MYAR} cq")
SET(RANLIB " ${MYRANLIB}")
#SET(LIBNAME ../../../../../lib/libSetupAppClass.a)

SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../Include/")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../Include/freetype2/")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../common/IPC/include")
SET(INCLUDES  ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../common/IPC/generate/include/system")

IF(NOT SUB_PROJECT STREQUAL NONE)
SET(MYDEFS ${MYDEFS} " -D${SUB_PROJECT}")
ENDIF(NOT SUB_PROJECT STREQUAL NONE)

IF(TARGET_BOARD STREQUAL YES)
SET(MYDEFS ${MYDEFS} " -DTARGET_BOARD")
ENDIF(TARGET_BOARD STREQUAL YES)

IF(GCODE_MENU STREQUAL YES)
SET(MYDEFS ${MYDEFS} " -DGCODE_MENU  -DVCRPLUS")
ENDIF(GCODE_MENU STREQUAL YES)

SET(CFLAGS " ${DEFINES} -DSYS_UNIX=1 ${MYDEFS}")

SET(SRCS ./SetupClass.cpp)
SET(OBJS ./SetupClass.o)

IF(APCFG_FLAGS MATCHES "APCFG_USE_SQLITE_SETUP")
SET(SRCS ${SRCS} ./SetupClassSqlite.cpp)
SET(OBJS ${OBJS} ./SetupClassSqlite.o)
ELSE(APCFG_FLAGS MATCHES "APCFG_USE_SQLITE_SETUP")
SET(SRCS ${SRCS} ./SetupClassBinary.cpp)
SET(OBJS ${OBJS} ./SetupClassBinary.o)
 IF(BUILD_COLUMBUS_SETUPCLASS STREQUAL Y)
 SET(SRCS ${SRCS} ./SetupClassAp.cpp)
 SET(OBJS ${OBJS} ./SetupClassAp.o)
 ENDIF(BUILD_COLUMBUS_SETUPCLASS STREQUAL Y)

ENDIF(APCFG_FLAGS MATCHES "APCFG_USE_SQLITE_SETUP")



INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS} ${DEBUGFLAG} ${WARNING})
ADD_LIBRARY(${LIBNAME} ${SRCS})
string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
