INCLUDE(../../../include/config.txt)

SET(LIBNAME SubParser)
SET(LIBRARY_OUTPUT_PATH ../../../lib/)
SET(MYDEFS )
SET(rm " /bin/rm -f")
SET(cp " /bin/cp -f")
SET(CC " ${MYCXX}")

SET(INCLUDES ${INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/../../Include/)
SET(INCLUDES ${INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/../../../../common/IPC/include)
SET(INCLUDES  ${INCLUDES}  ${CMAKE_CURRENT_SOURCE_DIR}/../../../../common/IPC/generate/include/system)

SET(CFLAGS " {DEFINES} -DSYS_UNIX=1 ${MYDEFS}")
SET(SRCS ./BoardCommon.cpp)
SET(OBJS ./BoardCommon.o)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/${BOARD_ID})
#INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS} ${DEBUGFLAG} ${WARNING})
#ADD_LIBRARY(${LIBNAME} ${SRCS})


string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
