INCLUDE(../../../include/config.txt)

SET(LIBNAME GPIO)
SET(LIBRARY_OUTPUT_PATH ../../../lib/)

SET(CXX " ${MYCXX}")
SET(AR " ${MYAR} cq")
SET(rm " /bin/rm -f")
SET(RANLIB " ${MYRANLIB}")
#SET(LIBNAME ../../../lib/libGPIO.a)

SET(INCLUDES  ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../Include/")

IF(TARGET_BOARD STREQUAL YES)
SET(DEFINES ${DEFINES} " -DTARGET_BOARD")
ENDIF(TARGET_BOARD STREQUAL YES)

SET(DEFINES ${DEFINES} " ${DEFS} -DSYS_UNIX=1")
SET(CFLAGS ${CFLAGS} " ${DEFINES}")

SET(SRCS ./GPIO.cpp)
SET(OBJS ./GPIO.o)

INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS} ${DEBUGFLAG})
ADD_LIBRARY(${LIBNAME} ${SRCS})

string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
