INCLUDE(../../../../../include/config.txt)
SET(LIBNAME VoutUtil)
SET(LIBRARY_OUTPUT_PATH ../../../../../lib/)

SET(MYDEFS )
SET(rm " /bin/rm -f")
SET(cp " /bin/cp -f")
SET(CC " ${MYCXX}")
SET(AR " ${MYAR} cq")
SET(RANLIB " ${MYRANLIB}")
#SET(LIBNAME ../../../../../lib/libVoutUtil.a)

SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../Include/")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../Include/freetype2/")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../common")
SET(INCLUDES  ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../IPC/generate/include/video/")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../common/IPC/include")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../common/IPC/generate/include")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../common/IPC/generate/include/system")

IF(TARGET_BOARD STREQUAL YES)
SET(MYDEFS ${MYDEFS} " -DTARGET_BOARD")
ENDIF(TARGET_BOARD STREQUAL YES)

IF(USE_HDMI STREQUAL YES)
SET(MYDEFS ${MYDEFS} " -DUSE_HDMI")
ENDIF(USE_HDMI STREQUAL YES)

SET(CFLAGS " ${DEFINES} -DSYS_UNIX=1 ${MYDEFS}")
SET(SRCS ./VoutUtil.cpp)
SET(OBJS ./VoutUtil.o)
INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS} ${DEBUGFLAG} ${WARNING})
ADD_LIBRARY(${LIBNAME} ${SRCS})
string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
