INCLUDE(../../../../include/config.txt)
SET(LIBNAME VDecoderMPEG2)
SET(LIBRARY_OUTPUT_PATH ../../../../lib/)


SET(rm " /bin/rm -f")
SET(CC " ${MYCXX}")
SET(LINK " -=LINK=-")
SET(DEFS )
SET(AR " ${MYAR} cq")
SET(RANLIB " ${MYRANLIB}")
#SET(LIBNAME ../../../../lib/libVDecoderMPEG2.a)

SET(INCLUDES ${INCLUDES}  ${CMAKE_CURRENT_SOURCE_DIR}/.)
SET(INCLUDES ${INCLUDES}  ${CMAKE_CURRENT_SOURCE_DIR}/../../../Include)
SET(INCLUDES ${INCLUDES}  ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../common/IPC/include)
SET(INCLUDES ${INCLUDES}  ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../common/IPC/generate/include/system)

IF(NOT USE_VIDEO_DECODER_SIMULATOR STREQUAL NO)
SET(MYDEFS ${MYDEFS} " -DUSE_VIDEO_DECODER_SIMULATOR")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/VideoDecoderSimulator)
ENDIF(NOT USE_VIDEO_DECODER_SIMULATOR STREQUAL NO)

IF(NOT TARGET_BOARD STREQUAL NO)
SET(MYDEFS ${MYDEFS} " -DTARGET_BOARD")
ENDIF(NOT TARGET_BOARD STREQUAL NO)

SET(SRCS CMPEG2Decoder.cpp CMPEG2InputPin.cpp CVideoFilter.cpp  CVideoMixerFilter.cpp  CMixerInputPin.cpp CVideoOutFilter.cpp CVideoOutInputPin.cpp CVideoSystemRPC.cpp CMPEG2DecoderRM.cpp)
SET(OBJS CMPEG2Decoder.o CMPEG2InputPin.o CVideoFilter.o   CVideoMixerFilter.o  CMixerInputPin.o	CVideoOutFilter.o	CVideoOutInputPin.o CVideoSystemRPC.o CMPEG2DecoderRM.o)

SET(CFLAGS " ${DEFINES} -DSYS_UNIX=1 ${MYDEFS}")
INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS} ${DEBUGFLAG} ${WARNING})
ADD_LIBRARY(${LIBNAME} ${SRCS})
string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
