INCLUDE(../../../include/config.txt)

SET(LIBNAME NavigationFilter)
SET(LIBRARY_OUTPUT_PATH ../../../lib/)



SET(rm " /bin/rm -f")
SET(CC " ${MYCC}")
SET(LINK " -=LINK=-")
SET(DEFS )
SET(AR " ${MYAR} cq")
SET(RANLIB " ${MYRANLIB}")
#SET(LIBNAME ../../../lib/libNavigationFilter.a)

IF(TEST_TS STREQUAL YES)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/DemuxMPEGProgram)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/DemuxPassthrough)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/DemuxMPEGTransport)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputDVDVideo)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputVCD)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputNetwork)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputDTV)

  IF(BUILD_ATSC_T STREQUAL Y)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SiAtsc)
  ENDIF(BUILD_ATSC_T STREQUAL Y)

  IF(BUILD_DVB_T STREQUAL Y)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/SiDvb)
  ENDIF(BUILD_DVB_T STREQUAL Y)

ELSE(TEST_TS STREQUAL YES)

  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/DemuxMPEGProgram)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/DemuxPassthrough)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputDVDVideo)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputVCD)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputNetwork)
  SET(ohci_1394_device YES)

ENDIF(TEST_TS STREQUAL YES)

IF(APCFG_FLAGS MATCHES "APCFG_HW_1394")
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/DemuxDV)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputDV)

  IF(ohci_1394_device STREQUAL YES)
    SET(DEFINES ${DEFINES} " -Dohci_1394_device")
    SET(LIBS ${LIBS} ohci1394)
  ENDIF(ohci_1394_device STREQUAL YES)
ENDIF(APCFG_FLAGS MATCHES "APCFG_HW_1394")

IF(NOT APCFG_FLAGS MATCHES "APCFG_PRJ_PHOTO_VIEWER")
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputDVDVR)
ENDIF(NOT APCFG_FLAGS MATCHES "APCFG_PRJ_PHOTO_VIEWER")

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/IOPlugins)

IF(INPUT_USE_IO_PLUGIN STREQUAL YES)
  IF(ENABLE_RM_INPUT_PLUGIN STREQUAL YES)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputRM)
    SET(DEFINES ${DEFINES} " -DENABLE_RM_INPUT_PLUGIN")
  ENDIF(ENABLE_RM_INPUT_PLUGIN STREQUAL YES)

  IF(ENABLE_FLASH_INPUT_PLUGIN STREQUAL YES)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputFlashES)
    SET(DEFINES ${DEFINES} " -DENABLE_FLASH_INPUT_PLUGIN")
  ENDIF(ENABLE_FLASH_INPUT_PLUGIN STREQUAL YES)
  
  IF(ENABLE_ASF_INPUT_PLUGIN STREQUAL YES)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputASF)
    SET(DEFINES ${DEFINES} " -DENABLE_ASF_INPUT_PLUGIN")
  ENDIF(ENABLE_ASF_INPUT_PLUGIN STREQUAL YES)

  IF(ENABLE_MP4_INPUT_PLUGIN STREQUAL YES)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputMP4)
    SET(DEFINES ${DEFINES} " -DENABLE_MP4_INPUT_PLUGIN")
  ENDIF(ENABLE_MP4_INPUT_PLUGIN STREQUAL YES)

  IF(ENABLE_OGG_INPUT_PLUGIN STREQUAL YES)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputOGG)
    SET(DEFINES ${DEFINES} " -DENABLE_OGG_INPUT_PLUGIN")
  ENDIF(ENABLE_OGG_INPUT_PLUGIN STREQUAL YES)

  IF(USE_STREAM_RTSP_IOPLUGIN STREQUAL YES)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputRTP)
    SET(DEFINES ${DEFINES} " -DSTREAM_RTSP_IOPLUGIN")
  ENDIF(USE_STREAM_RTSP_IOPLUGIN STREQUAL YES)


  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputPlaylist)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputVideoES)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputAudioES)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputMPEGFile)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputAVI)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputWAVE)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputMKV)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputFLV)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputAIFF)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputLPCM)

  SET(DEFINES ${DEFINES} " -DINPUT_USE_IO_PLUGIN")

  IF(DIVX_PROFILE STREQUAL DIVX_PLUS)
    ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/libDRM6.1)
  ENDIF(DIVX_PROFILE STREQUAL DIVX_PLUS)

ELSE(INPUT_USE_IO_PLUGIN STREQUAL YES)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputFile)
ENDIF(INPUT_USE_IO_PLUGIN STREQUAL YES)

IF(ENABLE_NEPTUNE_TP_PLUGIN STREQUAL YES)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/InputTP)
  SET(DEFINES ${DEFINES} " -DENABLE_NEPTUNE_TP_PLUGIN")
ENDIF(ENABLE_NEPTUNE_TP_PLUGIN STREQUAL YES)

IF(USE_AVSYNC_FREE_RUN STREQUAL YES)
  SET(DEFINES ${DEFINES} " -DUSE_AVSYNC_FREE_RUN")
ENDIF(USE_AVSYNC_FREE_RUN STREQUAL YES)

SET(INCLUDES ${INCLUDES}  ${CMAKE_CURRENT_SOURCE_DIR}/../../Include)
SET(INCLUDES ${INCLUDES}  ${CMAKE_CURRENT_SOURCE_DIR}/../../../../common/IPC/include)
SET(INCLUDES  ${INCLUDES}  ${CMAKE_CURRENT_SOURCE_DIR}/../../../../common/IPC/generate/include/system)

SET(DEFINES ${DEFINES} " ${DEFS} -DSYS_UNIX=1")
SET(CFLAGS " ${DEFINES} ${COMPILE_OPT}")

IF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
  SET(CFLAGS ${CFLAGS} " -D__NAV_USE_DLL_PLUGIN__")
ENDIF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)

SET(CFLAGS ${CFLAGS} " -DERROR_CONCEALMENT_LEVEL=${ERROR_CONCEALMENT_LEVEL}")
SET(CFLAGS ${CFLAGS} " -DRECOVERY_JUMP_LEVEL=${RECOVERY_JUMP_LEVEL}")

SET(SRCS CNavigationFilter.cpp NavPluginFactory.cpp)
SET(OBJS CNavigationFilter.o NavPluginFactory.o)

INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS} ${DEBUGFLAG} ${WARNING})
ADD_LIBRARY(${LIBNAME} ${SRCS})

string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
