INCLUDE(../../../include/config.txt)

SET(LIBNAME playbackflow)
SET(LIBRARY_OUTPUT_PATH ../../../lib/)

SET(rm " /bin/rm -f")
SET(CC " ${MYCXX}")
SET(LINK " -=LINK=-")
SET(DEFS )
SET(AR " ${MYAR} cq")
SET(RANLIB " ${MYRANLIB}")
#SET(LIBNAME ../../../lib/libplaybackflow.a)

SET(INCLUDES  ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../Include")
SET(DEFINES " ${DEFS} -DSYS_UNIX=1")
SET(CFLAGS " ${DEFINES} ${COMPILE_OPT}")
SET(SRCS CPlaybackFlowManager.cpp)
SET(OBJS CPlaybackFlowManager.o)
INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS} ${DEBUGFLAG} ${WARNING})
ADD_LIBRARY(${LIBNAME} ${SRCS})
string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
