INCLUDE(../../../../include/config.txt)

ADD_SUBDIRECTORY(FilePlugin)
ADD_SUBDIRECTORY(TranscodePlugin)
ADD_SUBDIRECTORY(HttpPlugin)
ADD_SUBDIRECTORY(Custom1)
ADD_SUBDIRECTORY(Custom2)
ADD_SUBDIRECTORY(Custom3)
ADD_SUBDIRECTORY(FileLinkPlugin)

IF(USE_STREAM_PPS_IOPLUGIN STREQUAL YES)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/PPSPlugin)
ENDIF(USE_STREAM_PPS_IOPLUGIN STREQUAL YES)

IF(USE_STREAM_RTSP_IOPLUGIN STREQUAL YES)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/RtspPlugin)
ENDIF(USE_STREAM_RTSP_IOPLUGIN STREQUAL YES)

IF(USE_STREAM_RTP_IOPLUGIN STREQUAL YES)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/RtpPlugin)
ENDIF(USE_STREAM_RTP_IOPLUGIN STREQUAL YES)

IF(USE_STREAM_MMS_IOPLUGIN STREQUAL YES)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/MmsPlugin)
ENDIF(USE_STREAM_MMS_IOPLUGIN STREQUAL YES)

string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
