INCLUDE(../../../../include/config.txt)
SET(LIBNAME InputASF)
SET(LIBRARY_OUTPUT_PATH ../../../../lib/)



SET(rm " /bin/rm -f")
SET(CC " ${MYCC}")
SET(LINK " -=LINK=-")
SET(DEFS )
SET(AR " ${MYAR} cq")
SET(RANLIB " ${MYRANLIB}")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/.")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../Include")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../common/IPC/include")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../common/IPC/generate/include/system")
SET(INCLUDES  ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../Include/Filters")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../Include")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../common/IPC/include")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../common/IPC/generate/include/system")

SET(DEFINES ${DEFINES} " ${DEFS} -DSYS_UNIX=1 -DHAVE_STRING_H -DRDDEBUG -DINPUT_USE_IO_PLUGIN")

IF(NOT TARGET_BOARD STREQUAL NO)
SET(DEFINES ${DEFINES} " -DTARGET_BOARD")
ENDIF(NOT TARGET_BOARD STREQUAL NO)

SET(CFLAGS " ${DEFINES} ${COMPILE_OPT}")

SET(CXXFLAGS ${CXXFLAGS} " ${DEFINES} ${COMPILE_OPT}")

IF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
SET(LIBNAME ../../../../lib/InputASF.so)
SET(CFLAGS ${CFLAGS} " -fPIC -D__NAV_USE_DLL_PLUGIN__")
ELSE(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
#SET(LIBNAME ../../../../lib/libInputASF.a)
ENDIF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)

SET(SUPPORT_WMDRM_FLAG YES)

IF(SUPPORT_WMDRM_FLAG STREQUAL YES)
INCLUDE(WMDRMPD_1007/makefile.inc.2.txt)
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/WMDRMPD_1007/Source/inc")
SET(DEFINES ${DEFINES} " -DSUPPORT_WMDRM_PD")
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/WMDRMPD_1007)
ENDIF(SUPPORT_WMDRM_FLAG STREQUAL YES)

SET(NETFLIX_TEST NO)
IF(NETFLIX_TEST STREQUAL YES)
SET(DEFINES ${DEFINES} " -DNETFLIX_TEST")
ENDIF(NETFLIX_TEST STREQUAL YES)

SET(SRCS InputASF.c ASFGUID.c asf_parse.c Security.c)
SET(OBJS InputASF.o ASFGUID.o asf_parse.o Security.o)

IF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
ELSE(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
ENDIF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)

INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS} ${DEBUGFLAG} ${WARNING})
ADD_LIBRARY(${LIBNAME} ${SRCS})
string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
