INCLUDE(../../../../include/config.txt)
SET(LIBNAME InputAVI)
SET(LIBRARY_OUTPUT_PATH ../../../../lib/)

SET(rm " /bin/rm -f")
SET(CC " ${MYCC}")
SET(LINK " -=LINK=-")
SET(DEFS )
SET(AR " ${MYAR} cq")
SET(RANLIB " ${MYRANLIB}")

SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/.")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../Include")
SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../common/IPC/include")
SET(INCLUDES  ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../common/IPC/generate/include/system")

SET(DEFINES ${DEFINES} " ${DEFS} -DSYS_UNIX=1 -DHAVE_STRING_H -DRDDEBUG")
SET(DEFINES ${DEFINES} " -DLINUX -DDIVXINT_NATIVE_64BIT -DLARGE_FILE_SUPPORT -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64")

#SET(CFLAGS ${CFLAGS} " ${DEFINES} ${COMPILE_OPT}")
SET(CXXFLAGS ${CXXFLAGS} " ${DEFINES} ${COMPILE_OPT}")

IF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
  SET(LIBNAME ../../../../lib/InputAVI.so)
  SET(CFLAGS ${CFLAGS} " -fPIC -D__NAV_USE_DLL_PLUGIN__")
ELSE(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
  #SET(LIBNAME ../../../../lib/libInputAVI.a)
ENDIF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)

IF(DIVX_PROFILE STREQUAL HOME_THEATER)

  SET(DEFINES ${DEFINES} " -DDIVX_HOME_THEATER")
  SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/ADP-3.0.2")
  SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/ADP-3.0.2/common")
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ADP-3.0.2)

ELSE(DIVX_PROFILE STREQUAL HOME_THEATER)
IF(DIVX_PROFILE STREQUAL DIVX_ULTRA)
  SET(DEFINES ${DEFINES} " -DDIVX_ULTRA")
  SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/ADP-3.0.2")
  SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/ADP-3.0.2/common")
  SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/libMenuController")
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ADP-3.0.2)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/libMenuController) 
ELSE(DIVX_PROFILE STREQUAL DIVX_ULTRA)
IF(DIVX_PROFILE STREQUAL DIVX_HD)
  SET(DEFINES ${DEFINES} " -DDIVX_HD")
  SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/libDrmDevice")
  SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/libDrmDevice/common")
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/libDrmDevice)
ELSE(DIVX_PROFILE STREQUAL DIVX_HD)
IF(DIVX_PROFILE STREQUAL DIVX_HD_51)
  SET(DEFINES ${DEFINES} " -DDIVX_HD_51")
  SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/libDrmDevice51")
  SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/libDrmDevice51/common")
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/libDrmDevice51)
ELSE(DIVX_PROFILE STREQUAL DIVX_HD_51)
IF(DIVX_PROFILE STREQUAL DIVX_PLUS)
  SET(DEFINES ${DEFINES} " -DDIVX_PLUS")
  SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../libDRM6.1/Common")
  SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../libDRM6.1/ComponentCryptoLayer")
  SET(INCLUDES ${INCLUDES} " ${CMAKE_CURRENT_SOURCE_DIR}/../libDRM6.1/DRMCommon")
ENDIF(DIVX_PROFILE STREQUAL DIVX_PLUS)
ENDIF(DIVX_PROFILE STREQUAL DIVX_HD_51)
ENDIF(DIVX_PROFILE STREQUAL DIVX_HD)
ENDIF(DIVX_PROFILE STREQUAL DIVX_ULTRA)
ENDIF(DIVX_PROFILE STREQUAL HOME_THEATER)

SET(CFLAGS ${CFLAGS} " -Wno-multichar")
SET(SRCS InputAVI.c AVI2.c OggDecode.c)
SET(OBJS InputAVI.o AVI2.o OggDecode.o)
SET(WARNING ${WARNING} " -Wno-multichar")
IF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
ELSE(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)
ENDIF(__NAV_USE_DLL_PLUGIN__ STREQUAL YES)

SET(CFLAGS ${CFLAGS} " ${DEFINES} ${COMPILE_OPT}")

INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS} ${DEBUGFLAG} ${WARNING})
ADD_LIBRARY(${LIBNAME} ${SRCS})
string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
